@@ -1,198 +1,171 @@
-description = 'OpenSRP immunization client library'
-
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:$androidToolsBuildGradle"
-        classpath 'org.apache.commons:commons-lang3:3.12.0'
-    }
+plugins {
+  id 'com.android.library'
+  id 'jacoco'
 }
-
-apply plugin: 'com.android.library'
-apply plugin: 'jacoco'
-apply plugin: 'com.github.kt3k.coveralls'
 
 jacoco {
-    toolVersion = "0.8.8"
-}
-
-allprojects {
-    repositories {
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
-        maven { url 'https://dl.bintray.com/ibm-watson-health/ibm-fhir-server-releases' }
-        mavenLocal()
-    }
+  toolVersion = '0.8.10'
 }
 
 android {
-    compileSdkVersion androidCompileSdkVersion
-    buildToolsVersion androidBuildToolsVersion
+  namespace 'org.smartregister.immunization'
+  compileSdk 35
+  buildToolsVersion '35.0.0'
 
-    defaultPublishConfig !isReleaseBuild() ? "debug" : "release"
+  defaultConfig {
+    minSdk 28
+    targetSdk 35
+    versionCode Integer.parseInt(project.VERSION_CODE)
+    versionName project.VERSION_NAME
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+  }
 
-    defaultConfig {
-        minSdkVersion androidMinSdkVersion
-        targetSdkVersion androidTargetSdkVersion
-        versionCode Integer.parseInt(project.VERSION_CODE)
-        versionName project.VERSION_NAME
-        multiDexEnabled true
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-        javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
+  buildFeatures {
+    buildConfig true
+  }
+
+  buildTypes {
+    debug {
+      enableUnitTestCoverage = true
+      buildConfigField 'int', 'VACCINE_SYNC_TIME', '12'
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "int", "VACCINE_SYNC_TIME", '12'
-        }
-
-        debug {
-            buildConfigField "int", "VACCINE_SYNC_TIME", '12'
-            testCoverageEnabled true
-        }
+    release {
+      minifyEnabled = false
+      proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
+      buildConfigField 'int', 'VACCINE_SYNC_TIME', '12'
     }
+  }
 
+  lint {
+    abortOnError = false
+  }
 
-    lintOptions {
-        abortOnError false
+  packaging {
+    resources {
+      excludes += [
+        'LICENSE.txt',
+        'META-INF/LICENSE',
+        'META-INF/LICENSE.txt',
+        'META-INF/license.txt',
+        'META-INF/NOTICE',
+        'META-INF/NOTICE.txt',
+        'META-INF/notice.txt',
+        'META-INF/ASL2.0',
+        'META-INF/DEPENDENCIES',
+        'META-INF/DEPENDENCIES.txt',
+        'META-INF/INDEX.LIST'
+      ]
     }
+  }
 
-    dexOptions {
-        incremental true
-        javaMaxHeapSize "4g"
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+    coreLibraryDesugaringEnabled true
+  }
+
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+      returnDefaultValues = true
+      all {
+        maxHeapSize = '1024m'
+        jvmArgs(
+          '--add-opens=java.base/java.lang=ALL-UNNAMED',
+          '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+          '--add-opens=java.base/java.io=ALL-UNNAMED',
+          '--add-opens=java.base/java.net=ALL-UNNAMED',
+          '--add-opens=java.base/java.util=ALL-UNNAMED',
+          '--add-opens=java.base/java.text=ALL-UNNAMED',
+          '--add-opens=java.base/java.security=ALL-UNNAMED',
+          '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
+          '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+          '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED',
+          '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+          '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
+          '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
+          '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        )
+        systemProperty 'robolectric.dependency.repo.url', 'https://repo1.maven.org/maven2'
+        systemProperty 'robolectric.enabledSdks', '28'
+      }
     }
+  }
 
-    // avoid errors with message 'Duplicate files copied in APK ...'
-    packagingOptions {
-        exclude 'META-INF/DEPENDENCIES.txt'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.md'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.md'
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/dependencies.txt'
-        exclude 'META-INF/LGPL2.1'
-        exclude 'LICENSE.txt'
-        exclude 'META-INF/LICENSE.md'
-        exclude 'META-INF/NOTICE.md'
-        exclude 'META-INF/ASL2.0'
-        exclude 'androidsupportmultidexversion.txt'
+  publishing {
+    singleVariant('release') {
+      withSourcesJar()
+      withJavadocJar()
     }
+  }
+}
 
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-            includeAndroidResources = true
-        }
-
-        unitTests.all {
-            jvmArgs "-Xmx3g"
-        }
-    }
-
-    compileOptions {
-        // Flag to enable support for the new language APIs
-        coreLibraryDesugaringEnabled true
-
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+tasks.withType(Test).configureEach {
+  jacoco {
+    includeNoLocationClasses = true
+    excludes = ['jdk.internal.*']
+  }
 }
 
 dependencies {
+  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
-    testImplementation 'junit:junit:4.13.2'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.0'
+  implementation('io.github.bluecodesystems:opensrp-client-core:6.2.2') {
+    transitive = true
+  }
+  implementation('io.github.bluecodesystems:opensrp-client-native-form-new:3.1.3') {
+    transitive = true
+  }
+  implementation('com.github.BlueCodeSystems:opensrp-client-configurable-views:v2.0.1') {
+    transitive = true
+  }
 
-    implementation('org.smartregister:opensrp-client-core:6.0.0-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'com.github.bmelnychuk', module: 'atv'
-        exclude group: 'jakarta.annotation', module: 'jakarta.annotation-api'
-        exclude group: 'com.ibm.fhir', module: 'fhir-model'
-        exclude group: 'com.ibm.fhir', module: 'fhir-path'
-    }
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'androidx.recyclerview:recyclerview:1.3.2'
+  implementation 'com.google.android.material:material:1.12.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+  implementation 'org.apache.commons:commons-lang3:3.13.0'
+  implementation 'com.evernote:android-job:1.4.3'
+  implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
+  implementation 'com.google.guava:guava:31.1-android'
+  implementation 'androidx.sqlite:sqlite:2.3.1'
+  implementation 'androidx.sqlite:sqlite-framework:2.3.1'
+  implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation('org.smartregister:opensrp-client-native-form:3.1.1-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-        exclude group: 'com.google.code.gson', module: 'gson'
-    }
-    testImplementation 'com.ibm.fhir:fhir-model:4.7.1'
-    testImplementation 'com.ibm.fhir:fhir-path:4.7.1'
+  testImplementation 'junit:junit:4.13.2'
+  testImplementation 'org.mockito:mockito-core:5.2.0'
+  testImplementation 'org.mockito:mockito-inline:5.2.0'
+  testImplementation 'org.robolectric:robolectric:4.10.3'
+  testImplementation 'androidx.sqlite:sqlite:2.3.1'
+  testImplementation 'androidx.test:core:1.5.0'
+  testImplementation 'net.zetetic:android-database-sqlcipher:4.5.4'
+  testImplementation 'org.json:json:20240303'
+  testImplementation 'org.skyscreamer:jsonassert:1.5.1'
 
-    testImplementation 'junit:junit:4.13.2'
-
-    testImplementation('org.robolectric:shadows-multidex:4.0.1') {
-        exclude group: 'com.google.guava', module: 'guava'
-    }
-
-    def robolectricVersion = '4.1'
-    testImplementation("org.robolectric:robolectric:$robolectricVersion") {
-        exclude group: 'com.google.auto.service', module: 'auto-service'
-        exclude group: 'com.android.support'
-    }
-    testImplementation ("org.robolectric:shadows-multidex:$robolectricVersion") {
-        exclude group: 'com.google.guava', module: 'guava'
-    }
-    testImplementation "org.robolectric:shadows-support-v4:3.4-rc2"
-
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'junit', module: 'junit'
-    }
-
-    // PowerMock
-    def powerMockVersion = '2.0.9'
-    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
-    testImplementation "org.powermock:powermock-module-junit4-rule:$powerMockVersion"
-    testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
-    testImplementation("org.powermock:powermock-classloading-xstream:$powerMockVersion")
-    testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
-    testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.1'
-    testImplementation "org.json:json:20220320"
+  androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+  androidTestImplementation 'androidx.test:rules:1.5.0'
 }
 
-tasks.withType(Test) {
-    jacoco.includeNoLocationClasses = true
-    jacoco.excludes = ['jdk.internal.*']
-}
+tasks.register('jacocoTestReport', JacocoReport) {
+  dependsOn 'testDebugUnitTest'
+  reports {
+    xml.required.set(true)
+    xml.outputLocation.set(file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"))
+    html.required.set(true)
+    html.outputLocation.set(file("${buildDir}/reports/jacoco/jacocoRootReport/html"))
+  }
 
-task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+  def fileFilter = ['**/R.class','**/R$*.class','**/BuildConfig.*','**/Manifest*.*','**/*Test*.*','android/**/*.*','**/*$ViewBinder*.*']
+  def debugTree = fileTree(dir: "$buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
+  def mainSrc = "$projectDir/src/main/java"
 
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-
-    getReports().getXml().setDestination(file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"))
-    getReports().getHtml().setDestination(file("${buildDir}/reports/jacoco/jacocoRootReport/html"))
-
-    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'androidx/**/*.*', 'android/**/*.*', '**/*$ViewBinder*.*']
-    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
-    def mainSrc = "$project.projectDir/src/main/java"
-
-    sourceDirectories.setFrom(files([mainSrc]))
-    classDirectories.setFrom(files([debugTree]))
-    executionData.setFrom(
-            fileTree(dir: project.buildDir, includes: [
-                    'jacoco/testDebugUnitTest.exec',
-                    'outputs/code_coverage/debugAndroidTest/connected/*coverage.ec'
-            ]),
-            fileTree(dir: project.projectDir, includes: ['**/*.exec', '**/*.ec'])
-    )
-}
-
-coveralls {
-    jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"
+  sourceDirectories.setFrom(files(mainSrc))
+  classDirectories.setFrom(files(debugTree))
+  executionData.setFrom(fileTree(dir: buildDir, includes: [
+    'jacoco/testDebugUnitTest.exec',
+    'outputs/code-coverage/connected/*coverage.ec'
+  ]))
 }
 
 apply from: '../maven.gradle'
